# vng-database

./: .cursorrules  .gitignore  Cargo.toml  MCP-QUICKSTART.md  README-MCP.md  README.md  TASK_COMPLETION_CERTIFICATE.md  VALIDATION_COMPLETE_WS5_WS6_FINAL.md  VALIDATION_EXECUTION_REPORT_2026-04-09.md  VALIDATION_REPORT_WS5_WS6.md  WS3_TESTS_IMPLEMENTATION_COMPLETE.md  check_out.txt  combined-status-tracker.md  create_tables_with_data.sql  fix_corruptions.py  fix_handlers.ps1  fix_handlers.py  fix_handlers2.py  fix_main3.py  fix_main4.py  fix_main5.py  fix_main6.py  fix_main7.py  fix_s20_main.js  fix_s27.js  fix_s28.js  fix_s29.js  fix_s30.js  fix_s31.js  fix_s32.js  fix_s33.js  fix_s34.js  fix_s35.js  fix_s36.js  fix_s37.js  fix_s45.js  fix_s45b.js  fix_s46.js  fix_s46_final.js  fix_s46b.js  (+44 more)
.cursor/rules/: gate-scripts.mdc  rust-conventions.mdc  security-rbac.mdc  testing.mdc
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  gap-analyst.agent.md  gate-runner.agent.md  multi-agent-dev-orchestrator.agent.md  parallel-agents.md  parallel-test-orchestrator.agent.md  quality-test-engineer.agent.md  security-reviewer.agent.md  solid-reuse-reviewer.agent.md  status-tracker-10x-executor.agent.md  tracker-updater.agent.md
.github/instructions/: codacy.instructions.md  engineering-quality.instructions.md  gate-scripts.instructions.md  rust-conventions.instructions.md  security-rbac.instructions.md  testing-strategy.instructions.md
.github/prompts/: run-status-tracker-queue.prompt.md
.github/workflows/: ci.yml  drivers-ci.yml
crates/voltnuerongrid-exec-datafusion/: Cargo.toml
crates/voltnuerongrid-exec-datafusion/src/: datafusion.rs  lib.rs
crates/voltnuerongrid-ingest/: Cargo.toml
crates/voltnuerongrid-ingest/src/: batch_config.rs  chunked_loader.rs  csv.rs  excel.rs  json.rs  lib.rs  parquet.rs
crates/voltnuerongrid-mcp/: CODACY_ANALYSIS_STATUS.md  Cargo.toml  OPERATIONS.md  README.md  TEST_SUMMARY.md
crates/voltnuerongrid-mcp/src/: auth.rs  guardrails.rs  integration.rs  lib.rs  tools.rs
crates/voltnuerongrid-mcp/tests/: integration_tests.rs
crates/voltnuerongrid-sql/: Cargo.toml
crates/voltnuerongrid-sql/src/: ast.rs  legacy_aggregations.rs  lib.rs  planner.rs  sqlparser_adapter.rs  tokenizer.rs
crates/voltnuerongrid-store/: Cargo.toml
crates/voltnuerongrid-store/src/: columnar.rs  constraints.rs  ddl_catalog.rs  htap_sync.rs  index.rs  lib.rs  mvcc.rs  rocksdb_engine.rs  trigger_emitter.rs  triggers.rs  wal_adapter.rs
deploy/cloud/: README.md
documentation/: QUICKSTART.md  README.md  complete.html  index.html  part2.html  part3.html  part4.html
drivers/voltnuerongrid-driver-python/: README.md  pyproject.toml
drivers/voltnuerongrid-driver-python/src/voltnuerongrid_driver_python/: __init__.py  driver.py  http_transport.py  native_session.py  native_wire.py
drivers/voltnuerongrid-driver-python/tests/: test_driver.py  test_http_transport.py
drivers/voltnuerongrid-driver-rust/: Cargo.toml  README.md
drivers/voltnuerongrid-driver-rust/src/: lib.rs
mcp-config-pack/: .env.example  README.md  cursor.mcp.template.json
prompts/: brand-shortlist.md  prompt-1.md  prompt-2.md  prompt-3.md  prompt-4.md  prompt-5.md  prompt-6.md  prompt-7.md  prompt-8.md
reference/: autonomous-guardrails-api.md  h02-htap-sync-correctness-spec.md  h10-arb-charter.md  h10-deprecation-policy.md  h10-deprecation-registry.md  hardening-review-h01-h04-template.md  voltnuerongrid-ws.md  ws2-durability-contract.md
scripts/: start-vng-local.sh
services/voltnuerongridd/: Cargo.toml
services/voltnuerongridd/reference/: compatibility-matrix-v1.md  driver-core-contract-v1.md  h09-cross-ide-parity-test-matrix.md  h10-governance-checklist.md  multi-language-driver-expansion-s10-v1.md  native-frame-schema-v1.sample.json  native-listener-config-contract-v1.md  native-protocol-v1.md  non-goals-and-phased-deferrals-v3.md  performance-proof-s8-s9-local-v1.md  perl-binding-feasibility-s10-v1.md  production-tuning-playbook-v1.md  productization-rc-s11-local-v1.md  prompt-requirement-traceability-matrix-v3.md  rc-packaging-installation-guides-s11-v1.md  runtime-native-listener-checklist-nt-s2-002-003.md  s8-memory-allocator-strategy.md  s9-production-tuning-playbook-v1.md  security-compliance-checklist-v1.md  security-compliance-closure-s11-v1.md  versioned-compatibility-matrix-s11-v1.md  voltnuerongrid-db-design.md  vscode-ts-driver-integration-adr-v1.md  ws2-durability-contract.md
services/voltnuerongridd/reference/config-contracts/ws14/: driver-routing-config.json  driver-routing-config.properties  security-control-config.json  security-control-config.properties  security-control-config.yaml
services/voltnuerongridd/src/: audit_helpers.rs  auth.rs  config_init.rs  main.rs  observability.rs  raft.rs  resilience.rs  router.rs  tests.rs
services/voltnuerongridd/src/handlers/: admin.rs  audit.rs  autonomous.rs  catalog.rs  cdc.rs  driver.rs  ingest.rs  misc.rs  mod.rs  raft.rs  rows.rs  security.rs  sql.rs  sre.rs  store.rs  wal.rs
services/voltnuerongridd/src/helpers/: boot.rs  cluster.rs  dr_hook.rs  env_helpers.rs  execution.rs  mod.rs  native_protocol.rs  raft_loop.rs  sql_parse.rs  time.rs  udf.rs
services/voltnuerongridd/state/: ddl.wal  dml.wal
state/: ddl.wal  dml.wal  dr-hook-runtime.json  dr-hook-runtime.json.bak  ingest-outbox-cursors.wal  ingest-outbox-runtime.wal
tests/soak/: Cargo.toml
tests/soak/src/: concurrency_soak.rs  failure_injection.rs  lib.rs
tests/soak/tests/: crash_recovery.rs
tools/: apply_session11.py  apply_session11_v2.py  create-h02-artifacts.ps1  fix-remaining-timestamps.ps1  refresh-stale-ci-artifacts.ps1  refresh-ws-release-summaries.ps1  run_sql_example.sh  update-trackers-session126.ps1
tools/voltnuerongrid-audit-companion/: Cargo.toml
tools/voltnuerongrid-audit-companion/src/: main.rs
tools/voltnuerongrid-migrate/: Cargo.toml
tools/voltnuerongrid-migrate/src/: main.rs
ui/voltnuerongrid-studio/src-tauri/: Cargo.toml  tauri.conf.json
ui/voltnuerongrid-studio/src-tauri/src/: lib.rs  main.rs
(+830 files in other folders)
