[workspace]
resolver = "2"
members = [
  "crates/voltnuerongrid-core",
  "crates/voltnuerongrid-config",
  "crates/voltnuerongrid-sql",
  "crates/voltnuerongrid-opt",
  "crates/voltnuerongrid-exec",
  "crates/voltnuerongrid-exec-datafusion",
  "crates/voltnuerongrid-store",
  "crates/voltnuerongrid-meta",
  "crates/voltnuerongrid-ingest",
  "crates/voltnuerongrid-plugins",
  "crates/voltnuerongrid-ai",
  "crates/voltnuerongrid-auth",
  "crates/voltnuerongrid-audit",
  "crates/voltnuerongrid-failover",
  "crates/voltnuerongrid-mcp",
  "services/voltnuerongridd",
  "drivers/voltnuerongrid-driver-rust",
  "drivers/voltnuerongrid-driver-c",
  "tools/voltnuerongrid-audit-companion",
  "tools/voltnuerongrid-migrate",
  "tests/soak",
  "tests/benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["VoltNueronGrid Team"]

