[package]
name = "voltnuerongrid-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
voltnuerongrid-core = { path = "../voltnuerongrid-core" }
voltnuerongrid-auth = { path = "../voltnuerongrid-auth" }
voltnuerongrid-sql = { path = "../voltnuerongrid-sql" }
voltnuerongrid-store = { path = "../voltnuerongrid-store" }
voltnuerongrid-exec = { path = "../voltnuerongrid-exec" }

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
thiserror = "1.0"
regex = "1.10"

[[bin]]
name = "mcp-stdio-server"
path = "bin/mcp-stdio-server.rs"

[dev-dependencies]
