[package]
name = "voltnuerongrid-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
voltnuerongrid-core = { path = "../voltnuerongrid-core" }
# Phase 1.6 — real SQL parsing. Optional behind a feature flag so a future
# release can ship without the dep when the bespoke VNG parser matures.
# Default-on (matches `SqlEngine::Datafusion` boot default).
sqlparser = { version = "0.51", optional = true }

[features]
default = ["sqlparser-adapter"]
sqlparser-adapter = ["dep:sqlparser"]
