[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voltnuerongrid-driver-python"
version = "0.1.0"
description = "VoltNueronGrid Python driver scaffold (Sprint V3-S1)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
