[package]
name = "voltnuerongrid-driver-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
voltnuerongrid-core = { path = "../../crates/voltnuerongrid-core" }
