[package]
name = "voltnuerongridd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
voltnuerongrid-core = { path = "../../crates/voltnuerongrid-core" }
voltnuerongrid-auth = { path = "../../crates/voltnuerongrid-auth" }
voltnuerongrid-audit = { path = "../../crates/voltnuerongrid-audit" }
voltnuerongrid-ai = { path = "../../crates/voltnuerongrid-ai" }
voltnuerongrid-exec = { path = "../../crates/voltnuerongrid-exec" }
voltnuerongrid-sql = { path = "../../crates/voltnuerongrid-sql" }
voltnuerongrid-store = { path = "../../crates/voltnuerongrid-store" }
voltnuerongrid-ingest = { path = "../../crates/voltnuerongrid-ingest" }
voltnuerongrid-opt = { path = "../../crates/voltnuerongrid-opt" }
voltnuerongrid-plugins = { path = "../../crates/voltnuerongrid-plugins" }
voltnuerongrid-driver-rust = { path = "../../drivers/voltnuerongrid-driver-rust" }
