[package]
name = "voltnuerongridd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
voltnuerongrid-core = { path = "../../crates/voltnuerongrid-core" }
voltnuerongrid-config = { path = "../../crates/voltnuerongrid-config" }
voltnuerongrid-meta = { path = "../../crates/voltnuerongrid-meta" }
voltnuerongrid-exec-datafusion = { path = "../../crates/voltnuerongrid-exec-datafusion", features = ["datafusion"] }
voltnuerongrid-auth = { path = "../../crates/voltnuerongrid-auth" }
voltnuerongrid-audit = { path = "../../crates/voltnuerongrid-audit" }
voltnuerongrid-ai = { path = "../../crates/voltnuerongrid-ai" }
voltnuerongrid-exec = { path = "../../crates/voltnuerongrid-exec" }
voltnuerongrid-sql = { path = "../../crates/voltnuerongrid-sql" }
voltnuerongrid-store = { path = "../../crates/voltnuerongrid-store", features = ["rocksdb"] }
voltnuerongrid-ingest = { path = "../../crates/voltnuerongrid-ingest" }
voltnuerongrid-opt = { path = "../../crates/voltnuerongrid-opt" }
voltnuerongrid-plugins = { path = "../../crates/voltnuerongrid-plugins" }
voltnuerongrid-mcp = { path = "../../crates/voltnuerongrid-mcp" }
voltnuerongrid-driver-rust = { path = "../../drivers/voltnuerongrid-driver-rust" }
tower-http = { version = "0.3", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Observability — Phase 0.4
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Prometheus exposition without pulling the full `prometheus` crate (which is heavy).
# `metrics` + `metrics-exporter-prometheus` give us a tiny, idiomatic API.
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

[dev-dependencies]
arrow-array = { version = "53", default-features = false }
arrow-schema = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
rust_xlsxwriter = "0.79"
