[package]
name = "voltnuerongrid-audit-companion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
voltnuerongrid-core = { path = "../../crates/voltnuerongrid-core" }
voltnuerongrid-audit = { path = "../../crates/voltnuerongrid-audit" }
