[package]
name = "voltnuerongrid-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# One-shot CLI to migrate the legacy text WAL files (state/ddl.wal, state/dml.wal)
# into a fresh RocksDB durability engine. Ships as part of Phase 2.1.

[dependencies]
voltnuerongrid-core = { path = "../../crates/voltnuerongrid-core" }
voltnuerongrid-store = { path = "../../crates/voltnuerongrid-store", features = ["rocksdb"] }

[[bin]]
name = "vng-migrate"
path = "src/main.rs"
