[package]
name = "voltnuerongrid-studio"
version = "0.1.0"
edition = "2021"

[lib]
name = "voltnuerongrid_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
keyring          = { version = "2", features = [] }
tokio            = { version = "1", features = ["rt", "fs"] }
